fix: hide x overflow in menu container

--- a/app/top-nav/top-nav.component.css
+++ b/app/top-nav/top-nav.component.css
@@ -4,6 +4,7 @@
     right: 0;
     z-index: 1999;
     height: 100%;
+    overflow-x: hidden;
     overflow-y: auto;
     background-color: transparent;
 }
